--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
-1) Ошибки API (code, message, description)
-2) Валидаторы параметров
+1) Код ответа при создании сущности - 201
+2) Ошибки API (code, message, description)
+3) Валидаторы параметров
