--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
-1) Код ответа при создании сущности - 201
+1) 404 для get /requests
 2) Ошибки API (code, message, description)
 3) Валидаторы параметров
